# covid19-sounds-npjDM

./: README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: lint.yaml
COVID19_prediction/data/: pickle_data_from_csv.py
results/: Experiment_results_figures.ipynb  Experiment_results_tables.ipynb  Experiment_with_bias_table.ipynb
results/output/: data_statis.sh
